Finished metadata handling

--- a/src/classes/SF_MetadataUtils.cls
+++ b/src/classes/SF_MetadataUtils.cls
@@ -7,89 +7,44 @@ public with sharing class SF_MetadataUtils {
 
 	public SF_MetadataUtils() {
 		
+        // We use lowercase names to avoid duplicated fields and objects
+
         String[] objNamesArray = new String[]{};
         Map<String, Schema.SObjectType> globalDescribe = Schema.getGlobalDescribe(); 
         for(String objectKey : globalDescribe.keySet()){
             String objectName = globalDescribe.get(objectKey).getDescribe().getName();
             if(!objectName.endsWithIgnoreCase('__kav')){
                 // We add the object to the existing ones map
-                this.existingObjectsMap.put(objectName, true);
+                String objNameLower = objectName.toLowerCase();
+                this.existingObjectsMap.put(objNameLower, true);
                 Map<String, Boolean> fieldsMap = new Map<String, Boolean>();
-                this.existingFieldsMap.put(objectName, fieldsMap);
+                this.existingFieldsMap.put(objNameLower, fieldsMap);
 
                 objNamesArray.add(objectName);
             }
         }
 
-        //System.debug(this.existingFieldsMap);
-
         // Now for each object, the fields
         Schema.DescribeSObjectResult[] sObjectsDescribe = Schema.describeSObjects(objNamesArray);
         for(Schema.DescribeSObjectResult objDesc : sObjectsDescribe){
             
-            Map<String, Boolean> currentFieldMap = this.existingFieldsMap.get(objDesc.getName());
+            Map<String, Boolean> currentFieldMap = this.existingFieldsMap.get(objDesc.getName().toLowerCase());
             Map<String, Schema.SObjectField> fieldMap = objDesc.fields.getMap();
 
             for(String fieldKey : fieldMap.keySet()){
                 Schema.SObjectField fieldSchema = fieldMap.get(fieldKey);
                 Schema.DescribeFieldResult dfr = fieldSchema.getDescribe();
-                currentFieldMap.put(dfr.getName(), true);
+                currentFieldMap.put(dfr.getName().toLowerCase(), true);
             }
         }
-
-        /*
-        MetadataService.MetadataPort service = createService();
-        List<MetadataService.ListMetadataQuery> queries = new List<MetadataService.ListMetadataQuery>();
-
-        MetadataService.ListMetadataQuery customObjQuery = new MetadataService.ListMetadataQuery();
-        customObjQuery.type_x = 'CustomObject';
-        queries.add(customObjQuery);
-
-        MetadataService.ListMetadataQuery customFieldsQuery = new MetadataService.ListMetadataQuery();
-        customFieldsQuery.type_x = 'CustomField';
-        queries.add(customFieldsQuery);
-
-        MetadataService.ListMetadataQuery stdFieldsQuery = new MetadataService.ListMetadataQuery();
-        stdFieldsQuery.type_x = 'Field';
-        queries.add(stdFieldsQuery);
-        
-        MetadataService.FileProperties[] fileProperties = service.listMetadata(queries, 25);
-
-        for(MetadataService.FileProperties fileProperty : fileProperties){
-
-            System.debug('Metadata object: ' + fileProperty.fullName);
-            System.debug('Type: ' + fileProperty.type_x);
-
-            if(fileProperty.type_x == 'CustomObject'){
-            	this.existingObjectsMap.put(fileProperty.fullName, true);
-            }
-            else if(fileProperty.type_x == 'CustomField') {
-            	String[] fullNameParts = fileProperty.fullName.split('\\.');
-            	String objName = fullNameParts[0];
-            	String fieldName = fullNameParts[1];            	
-
-            	Map<String, Boolean> fieldsMap;
-            	if(!this.existingFieldsMap.containsKey(objName)){
-            		fieldsMap = new Map<String, Boolean>();
-            		this.existingFieldsMap.put(objName, fieldsMap);
-            	}
-            	else {
-            		fieldsMap = this.existingFieldsMap.get(objName);
-            	}
-            	
-            	fieldsMap.put(fieldName, true);
-            }
-        }*/
 	}
 
 	public Boolean objectExists(String objName){
-		return this.existingObjectsMap.containsKey(objName);
+		return this.existingObjectsMap.containsKey(objName.toLowerCase());
 	}
 
 	public Boolean fieldExists(String objName, String fieldName){
-		//System.debug(objName + ' object exists? ' + this.existingObjectsMap.containsKey(objName));
-        System.debug(fieldName + ' field within ' + objName + ' object exists? ' + this.existingFieldsMap.get(objName).containsKey(fieldName));
-        return this.existingObjectsMap.containsKey(objName) && this.existingFieldsMap.get(objName).containsKey(fieldName);
+		return this.existingObjectsMap.containsKey(objName.toLowerCase()) && this.existingFieldsMap.get(objName.toLowerCase()).containsKey(fieldName.toLowerCase());
 	}
 
 	public List<String> createObject(String objName){
@@ -104,7 +59,7 @@ public with sharing class SF_MetadataUtils {
         cObj.pluralLabel = objName;
         cObj.nameField = new MetadataService.CustomField();
         cObj.nameField.type_x = 'AutoNumber';
-        cObj.nameField.label = objName + ' Name';
+        cObj.nameField.label = objName.replace('__c', '') + ' Name';
         cObj.deploymentStatus = 'Deployed';
         cObj.sharingModel = 'ReadWrite';
 
@@ -132,43 +87,55 @@ public with sharing class SF_MetadataUtils {
 	public List<String> createField(CustomFieldSpecification fieldSpec){
 		
         List<String> errors = new List<String>();
-		List<MetadataService.SaveResult> results;
-		MetadataService.MetadataPort service = createService();
-		MetadataService.CustomField cField = new MetadataService.CustomField();
-        
-        cField.fullName = fieldSpec.ObjectName + '.' + fieldSpec.Name;
-        cField.label = fieldSpec.Label;
-        cField.type_x = fieldSpec.Type;
-        
-        if(!String.isBlank(fieldSpec.ReferenceTo)){
-            cField.referenceTo = fieldSpec.ReferenceTo;
-        }
+		if(fieldSpec.Name.endsWithIgnoreCase('__c')){
+            List<MetadataService.SaveResult> results;
+            MetadataService.MetadataPort service = createService();
+            MetadataService.CustomField cField = new MetadataService.CustomField();
+            
+            cField.fullName = fieldSpec.ObjectName + '.' + fieldSpec.Name;
+            cField.label = fieldSpec.Label;
+            cField.type_x = fieldSpec.Type;
+            
+            if(!String.isBlank(fieldSpec.ReferenceTo)){
+                cField.referenceTo = fieldSpec.ReferenceTo;
+            }
 
-        cField.length = fieldSpec.Length;
+            if(fieldSpec.Length > 0 && !fieldSpec.Type.equalsIgnoreCase('MasterDetail') && !fieldSpec.Type.equalsIgnoreCase('Lookup') && !fieldSpec.Type.equalsIgnoreCase('Date'))
+            {
+                cField.length = fieldSpec.Length;
+            }
 
-        results = service.createMetadata(
-            new MetadataService.Metadata[] { cField }
-        );
+            if(fieldSpec.Type.equalsIgnoreCase('MasterDetail') || fieldSpec.Type.equalsIgnoreCase('Lookup')){
+                cField.relationshipName = fieldSpec.ObjectName.replace('__c', '') + 'Related';
+            }
 
-        if(results != null && results.size() > 0 && results.get(0).success){
-        	Map<String, Boolean> fieldsMap;
-        	if(!this.existingFieldsMap.containsKey(fieldSpec.ObjectName)){
-        		fieldsMap = new Map<String, Boolean>();
-        		this.existingFieldsMap.put(fieldSpec.ObjectName, fieldsMap);
-        	}
-        	else {
-        		fieldsMap = this.existingFieldsMap.get(fieldSpec.ObjectName);
-        	}
-        	
-        	fieldsMap.put(fieldSpec.Name, true);
+            results = service.createMetadata(
+                new MetadataService.Metadata[] { cField }
+            );
+
+            if(results != null && results.size() > 0 && results.get(0).success){
+                Map<String, Boolean> fieldsMap;
+                if(!this.existingFieldsMap.containsKey(fieldSpec.ObjectName)){
+                    fieldsMap = new Map<String, Boolean>();
+                    this.existingFieldsMap.put(fieldSpec.ObjectName, fieldsMap);
+                }
+                else {
+                    fieldsMap = this.existingFieldsMap.get(fieldSpec.ObjectName);
+                }
+                
+                fieldsMap.put(fieldSpec.Name, true);
+            }
+            else {
+                // Return error messages
+                System.debug('Couldn\'t create ' + cField.fullName + ' field. Reasons: ');
+                for(MetadataService.Error err : results.get(0).errors){
+                    errors.add(err.message);
+                    System.debug(err.message);
+                }        
+            }
         }
         else {
-        	// Return error messages
-            System.debug('Couldn\'t create ' + cField.fullName + ' field. Reasons: ');
-            for(MetadataService.Error err : results.get(0).errors){
-                errors.add(err.message);
-                System.debug(err.message);
-            }        
+            errors.add('Field creation ignored. Cannot create a standard field.');
         }
 
         return errors;
